--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
   <div class="card">
     <div class="video-wrapper">
-      <div class="badge">Ciao, sono Paolo, il tuo referente EarthCare.</div>
+      <div class="badge">.</div>
 
       <video
         id="profileVideo"
@@ -277,3 +277,4 @@
 
 </body>
 </html>
+
