--- a/ai.html
+++ b/ai.html
@@ -33,10 +33,9 @@
       left: 0;
     }
 
-    /* CONTAINER FULL SCREEN */
     #fullscreen-wrapper {
       position: fixed;
-      top: 50px; /* spazio per header */
+      top: 50px;
       left: 0;
       right: 0;
       bottom: 0;
@@ -46,7 +45,6 @@
       z-index: 1;
     }
 
-    /* OVERRIDE del widget HeyGen → trasformato in FULL SCREEN */
     #heygen-streaming-embed {
       position: absolute !important;
       left: 0 !important;
@@ -72,6 +70,9 @@
       object-fit: cover !important;
       border: none !important;
     }
+
+    /* Nasconde eventuale selettore lingua */
+    iframe::-webkit-scrollbar { display: none; }
   </style>
 </head>
 
@@ -81,8 +82,40 @@
 
   <div id="fullscreen-wrapper"></div>
 
-  <!-- 🔽 NUOVO SCRIPT HEYGEN CHE MI HAI FORNITO -->
- <script>!function(window){const host="https://labs.heygen.com",url=host+"/guest/streaming-embed?share=eyJxdWFsaXR5IjoiaGlnaCIsImF2YXRhck5hbWUiOiJLYXR5YV9Qcm9mZXNzaW9uYWxMb29rX3B1%0D%0AYmxpYyIsInByZXZpZXdJbWciOiJodHRwczovL2ZpbGVzMi5oZXlnZW4uYWkvYXZhdGFyL3YzLzM0%0D%0AOGRkZjUwM2M2NTRiOWJiYmI4YmVhOWY5MjEwZWFkXzU1ODcwL3ByZXZpZXdfdGFyZ2V0LndlYnAi%0D%0ALCJuZWVkUmVtb3ZlQmFja2dyb3VuZCI6dHJ1ZSwia25vd2xlZGdlQmFzZUlkIjoiNmRkNTZiYzUy%0D%0AYjlmNDdlYjkzNDMxODRlMTc4Y2M4ZWIiLCJ1c2VybmFtZSI6ImZiNDBjZGI1NjdlZjRjMTg5MDM4%0D%0ANDkwODI5YzIwZTZmIn0%3D&inIFrame=1",clientWidth=document.body.clientWidth,wrapDiv=document.createElement("div");wrapDiv.id="heygen-streaming-embed";const container=document.createElement("div");container.id="heygen-streaming-container";const stylesheet=document.createElement("style");stylesheet.innerHTML=`\n  #heygen-streaming-embed {\n    z-index: 9999;\n    position: fixed;\n    left: 40px;\n    bottom: 40px;\n    width: 200px;\n    height: 200px;\n    border-radius: 50%;\n    border: 2px solid #fff;\n    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.12);\n    transition: all linear 0.1s;\n    overflow: hidden;\n\n    opacity: 0;\n    visibility: hidden;\n  }\n  #heygen-streaming-embed.show {\n    opacity: 1;\n    visibility: visible;\n  }\n  #heygen-streaming-embed.expand {\n    ${clientWidth<540?"height: 266px; width: 96%; left: 50%; transform: translateX(-50%);":"height: 366px; width: calc(366px * 16 / 9);"}\n    border: 0;\n    border-radius: 8px;\n  }\n  #heygen-streaming-container {\n    width: 100%;\n    height: 100%;\n  }\n  #heygen-streaming-container iframe {\n    width: 100%;\n    height: 100%;\n    border: 0;\n  }\n  `;const iframe=document.createElement("iframe");iframe.allowFullscreen=!1,iframe.title="Streaming Embed",iframe.role="dialog",iframe.allow="microphone",iframe.src=url;let visible=!1,initial=!1;window.addEventListener("message",(e=>{e.origin===host&&e.data&&e.data.type&&"streaming-embed"===e.data.type&&("init"===e.data.action?(initial=!0,wrapDiv.classList.toggle("show",initial)):"show"===e.data.action?(visible=!0,wrapDiv.classList.toggle("expand",visible)):"hide"===e.data.action&&(visible=!1,wrapDiv.classList.toggle("expand",visible)))})),container.appendChild(iframe),wrapDiv.appendChild(stylesheet),wrapDiv.appendChild(container),document.body.appendChild(wrapDiv)}(globalThis);</script>
+  <script>
+  !function(window){
+    const host="https://labs.heygen.com";
+    const baseURL=host+"/guest/streaming-embed?share=eyJxdWFsaXR5IjoiaGlnaCIsImF2YXRhck5hbWUiOiJLYXR5YV9Qcm9mZXNzaW9uYWxMb29rX3B1%0AYmxpYyIsInByZXZpZXdJbWciOiJodHRwczovL2ZpbGVzMi5oZXlnZW4uYWkvYXZhdGFyL3YzLzM0%0AOGRkZjUwM2M2NTRiOWJiYmI4YmVhOWY5MjEwZWFkXzU1ODcwL3ByZXZpZXdfdGFyZ2V0LndlYnAi%0ALCJuZWVkUmVtb3ZlQmFja2dyb3VuZCI6dHJ1ZSwia25vd2xlZGdlQmFzZUlkIjoiNmRkNTZiYzUy%0AYjlmNDdlYjkzNDMxODRlMTc4Y2M4ZWIiLCJ1c2VybmFtZSI6ImZiNDBjZGI1NjdlZjRjMTg5MDM4%0ANDkwODI5YzIwZTZmIn0%3D&inIFrame=1";
+    const url = baseURL + "&lang=it"; // forza la lingua italiana
+
+    const clientWidth=document.body.clientWidth;
+    const wrapDiv=document.createElement("div");
+    wrapDiv.id="heygen-streaming-embed";
+
+    const container=document.createElement("div");
+    container.id="heygen-streaming-container";
+
+    const stylesheet=document.createElement("style");
+    stylesheet.innerHTML=`
+      #heygen-streaming-embed { z-index: 9999; position: fixed; left: 0; top: 0; width: 100%; height: 100%; border: 0; border-radius: 0; overflow: hidden; }
+      #heygen-streaming-container { width: 100%; height: 100%; }
+      #heygen-streaming-container iframe { width: 100%; height: 100%; border: 0; }
+    `;
+
+    const iframe=document.createElement("iframe");
+    iframe.allowFullscreen=false;
+    iframe.title="Streaming Embed Italiano";
+    iframe.role="dialog";
+    iframe.allow="microphone";
+    iframe.src=url;
+    iframe.setAttribute("sandbox", "allow-same-origin allow-scripts allow-microphone");
+
+    container.appendChild(iframe);
+    wrapDiv.appendChild(stylesheet);
+    wrapDiv.appendChild(container);
+    document.getElementById("fullscreen-wrapper").appendChild(wrapDiv);
+  }(globalThis);
+  </script>
 
 </body>
 </html>
